# liteplayer

./: BALLAD_FIX_QUICK_REFERENCE.md  BALLAD_PLAYBACK_FIX.md  CONCURRENT_FIX_FINAL_REPORT.md  DEBUG_AND_FIX_REPORT.md  DIAGNOSIS_AND_FIXES.md  DOCUMENTATION_INDEX.md  ENGINE_README.md  EXECUTION_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  INDEX.md  LITEPLAYER_WRAPPER_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_TEST_VERIFICATION.md  PHASE4.1_COMPLETION_REPORT.md  PHASE4.1_SUMMARY.txt  PHASE4_COMPLETE.md  PHASE4_FINAL_CHECKLIST.md  PHASE4_FIXES_SUMMARY.md  PHASE4_QUICKREF.md  PLAYBACK_FIX_VERIFICATION.md  QUICK_FIXES_SUMMARY.md  QUICK_REFERENCE.md  README_FINAL.txt  SYSTEM_STATUS_FIXED.md  TEST_EXECUTION_REPORT.md  test_ballad_playback.py
config/: music_player.yaml
data/: music_library.db
docs/: 00_Phase1-3_总结报告.md  01_评估报告.md  02_架构设计.md  03_ZMQ接口规范.md  04_Phase1完成报告.md  05_Phase2_进度报告.md  06_Phase2_PlaylistManager完成.md  07_Phase2_完成报告.md  08_Phase3_进度报告.md  09_Phase3_测试验证报告.md  10_Phase3_完成报告.md  11_Phase4_启动报告.md  12_Phase3_CRUD完成报告.md  13_Phase3_验收报告.md  14_Phase4_启动报告.md  15_Phase3-4_过渡总结.md  16_Phase4_完成报告.md  17_Phase4_最终测试完成报告.md  17_Phase4_真实数据测试完成.md  18_Phase4_最终完成报告_全部问题解决.md  DEBUG_GUIDE.md  LESSONS_LEARNED.md  运维.md  需求.md
emotion/: tag_tracks.py
engine/: CMakeLists.txt
engine/include/: ConfigLoader.h  JsonProtocol.h  LitePlayerWrapper.h  MusicLibrary.h  MusicPlayerService.h  MusicPlayerTypes.h  PlaybackController.h  PlaylistManager.h
engine/scripts/: music_player_cli.py  quick_test.sh
engine/src/: music_player_server.cpp
engine/src/core/: LitePlayerWrapper.cpp  PlaybackController.cpp  PlaylistManager.cpp
engine/src/service/: ConfigLoader.cpp  JsonProtocol.cpp  MusicPlayerService.cpp
engine/tests/: test_basic_playback.cpp  test_music_library.cpp  test_playback_controller.cpp  test_playlist_manager.cpp
example/unix/: CMakeLists.txt
scripts/: debug_play_by_filter.py  debug_summary.sh  doly-liteplayer.service  install_deps.sh  manage_liteplayer_service.sh  test_bear.py  test_client.py  test_music_features.py  test_new_commands.py  test_stop_play.py  verify_concurrent_fix.py
